--- a/Jose Zuniga Portfolio.html
+++ b/Jose Zuniga Portfolio.html
@@ -1,123 +1,298 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jose Zuniga – Agile Project Manager</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f8f9fa; color: #333; }
-    header { background: #003366; color: white; padding: 2em; text-align: center; }
-    header h1 { margin: 0; font-size: 2.5em; }
-    header p { font-size: 1.2em; }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Jose Zuniga Resume</title>
+<style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0; padding: 0; color: #333;
+    background: #fff;
+  }
+  .container {
+    max-width: 900px;
+    margin: 20px auto;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    background: #fff;
+  }
+  .main-column {
+    padding: 30px 40px;
+  }
+  .side-column {
+    background-color: #254263;
+    color: white;
+    padding: 30px 25px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px; /* reduced gap from 30px */
+  }
+  h1, h2, h3 {
+    margin: 0;
+  }
+  h1 {
+    font-size: 28px;
+    font-weight: 900;
+    color: #254263;
+    margin-bottom: 10px;
+  }
+  h2 {
+    font-size: 18px;
+    font-weight: 700;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 4px;  /* reduced from 6px */
+    margin-bottom: 8px;   /* reduced from 12px */
+  }
+  h3 {
+    font-size: 15px;
+    color: #254263;
+    margin-top: 10px;     /* reduced from 14px */
+    margin-bottom: 4px;   /* reduced from 6px */
+  }
+  .contact-info {
+    font-size: 14px;
+    margin-bottom: 25px;  /* reduced from 30px */
+    color: #444;
+  }
+  a {
+    color: #1a73e8;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+  .section {
+    margin-bottom: 16px; /* reduced from 28px */
+  }
+  p, li {
+    font-size: 14px;
+    line-height: 1.4;  /* slightly tighter */
+    margin-bottom: 4px; /* reduced from 7px */
+  }
+  ul {
+    padding-left: 20px;
+    margin-top: 4px;  /* reduced from 6px */
+  }
+  li {
+    margin-bottom: 4px; /* reduced from 7px */
+  }
+  /* Sidebar section titles */
+  .side-column h2 {
+    border-color: rgba(255,255,255,0.4);
+    color: white;
+  }
+  /* Sidebar lists */
+  .side-column ul {
+    padding-left: 18px;
+  }
+  .side-column li {
+    margin-bottom: 6px; /* reduced from 8px */
+    font-size: 14px;
+    color: #d6dbdf;
+  }
+  .achievements li {
+    color: white;
+  }
+  /* Language dots */
+  .lang-level {
+    display: inline-block;
+    margin-left: 8px;
+  }
+  .dot {
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 4px;
+  }
+  .dot.filled {
+    background-color: #1a73e8;
+  }
+  .dot.empty {
+    background-color: #bbb;
+  }
+  /* Responsive */
+  @media (max-width: 700px) {
+    .container {
+      grid-template-columns: 1fr;
+    }
+    .side-column {
+      display: block;
+      padding: 20px 30px;
+    }
+  }
+</style>
 
-    nav { text-align: center; margin-top: 1em; }
-    nav a { margin: 0 15px; text-decoration: none; color: #003366; font-weight: bold; }
-
-    section { max-width: 900px; margin: 2em auto; padding: 1em; background: white; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05); }
-    h2 { color: #003366; }
-
-    .contact, .skills, .education, .certifications { margin-bottom: 2em; }
-    ul { padding-left: 20px; }
-    .job-title { font-weight: bold; color: #444; }
-    .job-company { font-style: italic; color: #666; }
-    .job-dates { font-size: 0.9em; color: #888; }
-    footer { text-align: center; padding: 1em 0; font-size: 0.8em; color: #666; }
-  </style>
 </head>
 <body>
+  <div class="container">
+    <div class="main-column">
+      <h1>Jose Zuniga</h1>
+      <div class="contact-info">
+        Phone: +506 8897 5841 | Email: josean.111@gmail.com | Heredia, Costa Rica<br />
+        LinkedIn: <a href="https://www.linkedin.com/in/jose-azuniga" target="_blank" rel="noopener noreferrer">linkedin.com/in/jose-azuniga</a><br />
+        Portfolio: <a href="https://josean111.github.io/jose-zuniga-portfolio-/" target="_blank" rel="noopener noreferrer">josean111.github.io/jose-zuniga-portfolio-/</a>
+      </div>
 
-<header>
-  <h1>Jose Zuniga</h1>
-  <p>Senior Agile Project Manager | Scrum Master | Program Manager</p>
-  <p>📍 Heredia, Costa Rica | 📧 josean.111@gmail.com | 📱 +506 8897 5841</p>
-  <p><a href="https://linkedin.com/in/jose-azuniga" target="_blank" style="color: #ffffff;">LinkedIn Profile</a></p>
-</header>
+      <div class="section experience">
+        <h2>Work Experience</h2>
 
-<nav>
-  <a href="#about">About</a>
-  <a href="#experience">Experience</a>
-  <a href="#skills">Skills</a>
-  <a href="#certifications">Certifications</a>
-  <a href="#education">Education</a>
-  <a href="#contact">Contact</a>
-</nav>
+        <div>
+          <h3>iTree Training | Senior Program Agile Manager</h3>
+          <p><em>2022 – 2025</em></p>
+          <p>iTree is a global technology company that provides innovative training programs to enhance organizational efficiency and productivity.</p>
+          <p><strong>Role Description:</strong> Led several Agile projects, closely working with cross-functional teams to meet business goals, while ensuring alignment with company priorities. Managed resources, capacity planning, and Agile ceremonies, all while driving business value through the implementation of Scrum and SAFe methodologies.</p>
+          <ul>
+            <li>Led cross-functional teams across Agile projects, including planning, execution, and delivery using Scrum and SAFe methodologies.</li>
+            <li>Increased productivity by 35% and reduced time-to-market by 40% through the successful adoption of Agile practices.</li>
+            <li>Improved sprint planning and backlog refinement, reducing delivery delays by 25% and increasing on-time project delivery by 30%.</li>
+            <li>Established strong relationships with key stakeholders, resulting in 20% higher stakeholder satisfaction through transparency, regular reporting, and better risk management.</li>
+          </ul>
+        </div>
 
-<section id="about">
-  <h2>About Me</h2>
-  <p>
-    A results-driven Senior Project Manager and Scrum Master with over 16 years of experience leading cross-functional teams across dynamic, global industries. Specializing in Agile, Scrum, Kanban, and SAFe, I manage complex projects from concept to delivery, improving workflow efficiency, team collaboration, and business outcomes.
-  </p>
-</section>
+        <div>
+          <h3>IBM | Site Reliability Engineer</h3>
+          <p><em>2021 – 2024</em></p>
+          <p>IBM is a global leader in cloud computing, artificial intelligence, and business technology, delivering cutting-edge solutions to businesses across industries.</p>
+          <p><strong>Role Description:</strong> Focused on maintaining system uptime, reliability, and continuous improvement through proactive strategies. Led the monitoring of systems, designed disaster recovery plans, and implemented machine learning-driven predictive maintenance.</p>
+          <ul>
+            <li>Monitored and maintained production systems, ensuring optimal reliability and performance in line with Service Level Objectives (SLOs) and Service Level Indicators (SLIs).</li>
+            <li>Reduced unplanned outages by 6% through predictive maintenance and utilizing machine learning models and sensor data.</li>
+            <li>Designed capacity planning strategies that led to a 7% reduction in provisioning costs, ensuring efficient infrastructure scalability.</li>
+            <li>Enhanced disaster recovery processes, improving recovery success rates by 12% during peak traffic events.</li>
+          </ul>
+        </div>
 
-<section id="experience">
-  <h2>Work Experience</h2>
+        <div>
+          <h3>Optiva | Scrum Master / Engineering Project Manager</h3>
+          <p><em>2019 – 2021</em></p>
+          <p>Optiva is a leading provider of business support systems (BSS) solutions for communication service providers worldwide.</p>
+          <p><strong>Role Description:</strong> Led teams transitioning to Agile methodologies while managing complex engineering projects. Worked closely with various departments, facilitating communication and aligning project deliverables with customer and stakeholder needs.</p>
+          <ul>
+            <li>Coordinated cross-functional teams across time zones, ensuring alignment and meeting SLAs for project execution.</li>
+            <li>Delivered 95% of projects on time over a 3-year period, cutting project delays by 20% through effective scheduling and risk management.</li>
+            <li>Managed budgets totaling $50M+, achieving cost savings of 10-12% through resource optimization and cost control.</li>
+            <li>Facilitated collaboration across engineering, R&D, and manufacturing teams, reducing interdepartmental delays by 30%.</li>
+          </ul>
+        </div>
 
-  <p class="job-title">Senior Program Agile Manager – <span class="job-company">iTree Training</span> <span class="job-dates">(2022–2024)</span></p>
-  <ul>
-    <li>Led Agile transformation for 45+ collaborators, increasing productivity by 35% and reducing time-to-market by 40%.</li>
-    <li>Improved sprint planning and backlog refinement, cutting delivery delays by 25%.</li>
-    <li>Boosted stakeholder satisfaction by 20% through better communication and reporting.</li>
-  </ul>
+        <div>
+          <h3>Equifax | Engineering Project Manager</h3>
+          <p><em>2015 – 2019</em></p>
+          <p>Equifax is a global data, analytics, and technology company, providing businesses and individuals with trusted insights to make informed decisions.</p>
+          <p><strong>Role Description:</strong> Managed projects focused on cloud migration and CI/CD pipelines while enhancing the company's software delivery lifecycle. Served as Scrum Master during the Agile transition phase.</p>
+          <ul>
+            <li>Increased team productivity by 20% through the adoption of Scrum methodologies, improving SDLC processes and ensuring timely delivery of updates.</li>
+            <li>Improved cross-functional workflow efficiency by 20% by standardizing the CI/CD pipeline.</li>
+            <li>Automated build and deployment processes, speeding up deployment cycles by 50% and eliminating bottlenecks.</li>
+          </ul>
+        </div>
 
-  <p class="job-title">Site Reliability Engineer – <span class="job-company">IBM</span> <span class="job-dates">(2021–2024)</span></p>
-  <ul>
-    <li>Implemented predictive maintenance strategies, reducing outages by 6%.</li>
-    <li>Developed DR plans and optimized infrastructure, lowering costs and improving uptime.</li>
-  </ul>
+        <div>
+          <h3>Equifax | Technical Project Manager</h3>
+          <p><em>2012 – 2015</em></p>
+          <p><strong>Role Description:</strong> Led infrastructure upgrades, managed internal tools development, and integrated APIs to enhance operational efficiency.</p>
+          <ul>
+            <li>Managed a $600K IT infrastructure upgrade, improving system performance by 40% and reducing downtime by 2 hours per month.</li>
+            <li>Led the cloud migration of 9 enterprise tools, resulting in 22% cost savings in operational expenses and enhanced system scalability.</li>
+            <li>Introduced Agile practices across 14 teams, improving delivery speed by 30% and reducing project cycle times by 50%.</li>
+          </ul>
+        </div>
 
-  <p class="job-title">Scrum Master / Engineering PM – <span class="job-company">Optiva</span> <span class="job-dates">(2019–2021)</span></p>
-  <ul>
-    <li>Led global teams in a 24/7 support model, delivering 95% of projects on time.</li>
-    <li>Managed $50M+ budgets, saving 10–12% through efficient resource planning.</li>
-  </ul>
+      </div>
 
-  <p class="job-title">Engineering Project Manager – <span class="job-company">Equifax</span> <span class="job-dates">(2012–2019)</span></p>
-  <ul>
-    <li>Increased CI/CD efficiency by 20%, and automated deployment pipelines by 50%.</li>
-    <li>Migrated systems to cloud infrastructure, reducing OPEX by 22%.</li>
-  </ul>
-</section>
+    </div>
 
-<section id="skills" class="skills">
-  <h2>Technical Skills</h2>
-  <p><strong>Cloud & DevOps:</strong> AWS, Google Cloud, IBM Cloud, Azure, Docker, Terraform, Kubernetes</p>
-  <p><strong>Project Tools:</strong> Jira, Confluence, Slack, Trello, ServiceNOW, Workday, Asana</p>
-  <p><strong>Languages:</strong> Java, Python, JavaScript, Node.js, Shell Script</p>
-  <p><strong>Databases:</strong> Oracle, PostgreSQL, SQL Server</p>
-  <p><strong>OS:</strong> Windows, Unix, Linux</p>
-  <p><strong>Languages:</strong> Spanish (Native), English (C2 – Bilingual)</p>
-</section>
+    <div class="side-column">
 
-<section id="certifications" class="certifications">
-  <h2>Certifications</h2>
-  <ul>
-    <li>Certified Scrum Master (CSM)</li>
-    <li>PMI Agile Certified Practitioner (PMI-ACP)</li>
-    <li>SAFe® 4 Certified Practitioner</li>
-    <li>AWS Cloud Practitioner</li>
-  </ul>
-</section>
+     <div class="section summary">
+        <h2>Professional Summary</h2>
+        <p>
+          A results-driven Senior Project Manager and Scrum Master with over 16 years of experience leading cross-functional teams in dynamic environments across diverse industries. Adept at applying Agile methodologies, including Scrum, Kanban, and SAFe, to manage complex projects and programs from concept to successful delivery. Proven ability to drive business value by optimizing workflows, improving team collaboration, risk mitigation, resource planning, and ensuring timely, high-quality project outcomes.
+        </p>
+      </div>
+      
+      <div class="section achievements">
+        <h2>Key Achievements</h2>
+        <ul>
+          <li>Boosted cross-department efficiency (>30%) at Optiva</li>
+          <li>Automated deployments (50% faster cycles, Equifax)</li>
+          <li>Reduced costs and improved system reliability (IBM, iTree)</li>
+        </ul>
+      </div>
 
-<section id="education" class="education">
-  <h2>Education</h2>
-  <ul>
-    <li>Master's Degree in Project Management – Master Cum Laude, Spain</li>
-    <li>Master's Degree in Business Administration – Master Cum Laude, Spain</li>
-    <li>Bachelor's Degree in Computer Science – ULACIT, Costa Rica</li>
-  </ul>
-</section>
+      <div class="section skills">
+        <h2>Skills</h2>
+        <ul>
+          <li>Agile (Scrum, Kanban, SAFe, Lean)</li>
+          <li>Cloud Platforms: AWS, Google Cloud, IBM Cloud, Azure</li>
+          <li>DevOps Tools: Kubernetes, Docker, Terraform, Jenkins</li>
+          <li>Programming: Python, JavaScript, Node.js, Shell Script</li>
+          <li>Project Management Tools: Jira, Confluence, Trello, Asana</li>
+        </ul>
+      </div>
 
-<section id="contact">
-  <h2>Contact</h2>
-  <p>Email: <a href="mailto:josean.111@gmail.com">josean.111@gmail.com</a></p>
-  <p>Phone: +506 8897 5841</p>
-  <p>Location: Heredia, Costa Rica</p>
-  <p>LinkedIn: <a href="https://linkedin.com/in/jose-azuniga" target="_blank">linkedin.com/in/jose-azuniga</a></p>
-</section>
+      <div class="section certifications">
+        <h2>Certifications</h2>
+        <ul>
+          <li>Certified Scrum Master (CSM) (ID: 561348)</li>
+          <li>Agile Certified Practitioner (PMI-ACP)</li>
+          <li>SAFe® 4 Certified Practitioner (Scaled Agile, Inc.)</li>
+          <li>Amazon Web Services Cloud Practitioner</li>
+        </ul>
+      </div>
 
-<footer>
-  &copy; 2025 Jose Zuniga. All rights reserved.
-</footer>
+      <div class="section courses">
+        <h2>Courses</h2>
+        <ul>
+          <li>Technical: Introduction to Monitoring Kubernetes, Kubernetes Fundamentals, Monitoring a Kubernetes Cluster, Terraform on IBM Cloud</li>
+          <li>Soft Skills: 7 Habits for Effective Managers, SMART Goals for Managers</li>
+        </ul>
+      </div>
 
+      <div class="section languages">
+        <h2>Languages</h2>
+        <p>Spanish
+          <span class="lang-level">
+            <span class="dot filled"></span>
+            <span class="dot filled"></span>
+            <span class="dot filled"></span>
+            <span class="dot filled"></span>
+            <span class="dot filled"></span>
+          </span>
+        </p>
+        <p>English
+          <span class="lang-level">
+            <span class="dot filled"></span>
+            <span class="dot filled"></span>
+            <span class="dot filled"></span>
+            <span class="dot filled"></span>
+            <span class="dot filled"></span>
+          </span>
+        </p>
+      </div>
+
+      <div class="section additional-info">
+        <h2>Additional Information</h2>
+        <ul>
+          <li>Leadership: Coaching and mentoring teams to improve productivity and performance</li>
+          <li>Collaboration: Expertise in cross-functional teamwork and stakeholder management</li>
+          <li>Problem Solving: Adept at handling critical incidents and providing proactive solutions</li>
+        </ul>
+      </div>
+
+      <div class="section education">
+        <h2>Education</h2>
+        <ul>
+          <li>Master's Degree in Project Management &nbsp;|&nbsp; Master Cum Laude &nbsp;|&nbsp; Spain</li>
+          <li>Master's Degree in Business Administration &nbsp;|&nbsp; Master Cum Laude &nbsp;|&nbsp; Spain</li>
+          <li>Bachelor's Degree in Computer Science &nbsp;|&nbsp; ULACIT, Costa Rica</li>
+        </ul>
+      </div>
+      
+    </div>
+  </div>
 </body>
 </html>
